JDK 21 test